welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return (a >= 13 && a <= 19)
  ^